cmake_minimum_required(VERSION 3.24)
project(wireless_mesh_network)

set(CMAKE_CXX_STANDARD 17)
set(BOOST_ROOT "/opt/homebrew/Cellar/boost/1.81.0_1")
set(Boost_INCLUDE_DIR /opt/homebrew/Cellar/boost/1.81.0_1/include)
set(Boost_LIBRARY_DIR /opt/homebrew/Cellar/boost/1.81.0_1/lib)
find_package(Boost 1.81.0)
include_directories(${Boost_INCLUDE_DIR})
if(NOT Boost_FOUND)
    message(FATAL_ERROR "Could not find boost!")
endif()
find_package(Boost REQUIRED COMPONENTS regex date_time system filesystem thread graph program_options)
add_executable(wireless_mesh_network main.cpp)
target_link_libraries(wireless_mesh_network Boost::regex Boost::date_time Boost::system Boost::filesystem Boost::thread Boost::graph Boost::program_options)
